2006-11-07  Simon Budig  <simon@gimp.org>

	* tools/defcheck.py: provide an exit code indicating if the
	check was passed.

2006-11-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_oper_update):
	simplified.

2006-11-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpmodule.c: added context_push() and
	context_pop() methods to the gimp module.

	* plug-ins/pygimp/plug-ins/sphere.py: use them.

2006-11-07  Sven Neumann  <sven@gimp.org>

	* app/dialogs/file-save-dialog.c: undef DEBUG_SPEW again.

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_draw):
	don't draw the handles while the rectangle is being moved.

2006-11-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/ts-helloworld.scm: test scripts
	aren't localized, but should still follow the menu guidelines.

2006-11-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpdrawtool.[ch] (gimp_draw_tool_draw_corner):
	improved highlighting.
	(gimp_draw_tool_draw_arc_by_anchor): take width and height
	arguments instead of radius_x and radius_y.

	* app/tools/gimpiscissorstool.c
	* app/tools/gimpvectortool.c: slightly increased handle sizes.

	* app/tools/gimpmeasuretool.c: increased size of the end points.

	* app/tools/gimpperspectiveclonetool.c: increased handle size.

	* app/tools/gimprectangletool.c: renamed variables.

	* app/tools/gimpsourcetool.c: use a single define for the target size.

	* app/tools/gimptransformtool.[ch]: increased handle size. Made
	the area that can be grabbed identical to the displayed handle.
	Replaced filled circle with a circle outline and a cross.

	* app/tools/gimptransformtool-undo.c: follow renaming of define in
	gimptransformtool.h.

2006-11-07  Sven Neumann  <sven@gimp.org>

	* app/file/file-utils.c (file_utils_find_proc): improved error
	reporting.

2006-11-06  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpdrawtool.[ch] (gimp_draw_tool_draw_corner)
	* app/tools/gimprectangletool.c (gimp_rectangle_tool_draw):